--- a/effx-api/src/main/resources/application.yml
+++ b/effx-api/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   profiles:
     include:
       - db
+      - security
   data:
     web:
       pageable:
@@ -9,9 +10,6 @@ spring:
         max-page-size: 100
 
 server:
-  port: 8080
-  servlet:
-    context-path: /api
   compression:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain
